--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: rgba(0, 255, 21, 0.281);
+    background: rgb(62, 138, 68);
 }
 .navbar .max-width{
     display: flex;
@@ -115,7 +115,7 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: rgb(27, 220, 20);
+    color: rgb(55, 148, 52);
 }
 .navbar.sticky .menu li a:hover{
     color: #fff;
@@ -295,7 +295,7 @@ section .title::after{
     position: relative;
 }
 .skills .skills-content .right .line::before{
-    content: "";
+    content:"";
     position: absolute;
     height: 100%;
     left: 0;
@@ -306,16 +306,57 @@ section .title::after{
     width: 90%;
 }
 .skills-content .right .css::before{
-    width: 70%;
+    width: 60%;
 }
 .skills-content .right .js::before{
-    width: 70%;
+    width: 60%;
+
 }
-.contact #error-id{
-    margin-bottom: 20px;
-    padding: 10px;
-    background: red;
+.services, .teams{
+    color:#fff;
+    background: rgba(17, 17, 17, 0.507);
 }
+.services .title::before,
+.teams .title::before{
+    background: rgba(255, 255, 255, 0);
+}
+.services .title::after,
+.teams .title::after{
+    background: rgba(0, 0, 0, 0.021);
+    content: "what i provide";
+}
+.services .serv-content .card{
+    width: calc(33% - 20px);
+    background: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 50px 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.services .serv-content .card:hover{
+    background: rgb(37, 220, 20);
+}
+.services .serv-content .card .box{
+    transition: all 0.3s ease;
+}
+.services .serv-content .card:hover .box{
+    transform: scale(1.05);
+}
+.services .serv-content .card i{
+    font-size: 50px;
+    color: rgb(37, 220, 20);
+    transition: color 0.3s ease;
+}
+.services .serv-content .card:hover i{
+    color: #fff;
+}
+.services .serv-content .card .text{
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
+
 .contact .title::after{
     content: "get in touch";
 }
@@ -358,7 +399,7 @@ section .title::after{
 .contact .right form .fields .field{
     height: 45px;
     width: 100%;
-    margin-bottom: 15px;
+    margin-bottom: 35px;
 }
 .contact .right form .textarea{
     height: 80px;
@@ -384,34 +425,37 @@ section .title::after{
     border-color: #b3b3b3;
 }
 .contact .right form .textarea textarea{
-  padding-top: 10px;
-  resize: none;
+    padding-top: 10px;
+    resize: none;
+  }
+  .contact .right form .button-area{
+    display: flex;
+    align-items: center;
+  }
+  .right form .button-area button{
+    color: #fff;
+    display: block;
+    width: 160px!important;
+    height: 45px;
+    outline: none;
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 6px;
+    cursor: pointer;
+    flex-wrap: nowrap;
+    background: rgb(67, 220, 20);
+    border: 2px solid rgb(20, 220, 53);
+    transition: all 0.3s ease;
+  }
+  .right form .button-area button:hover{
+    color: rgb(20, 220, 80);
+    background: none;
+  }
+.er{
+    color: red;
+    font-size: 10px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.contact .right form .button-area{
-  display: flex;
-  align-items: center;
-}
-.right form .button-area button{
-  color: #fff;
-  display: block;
-  width: 160px;
-  height: 45px;
-  outline: none;
-  font-size: 18px;
-  font-weight: 500;
-  border-radius: 6px;
-  cursor: pointer;
-  flex-wrap: nowrap;
-  background: rgb(27, 220, 20);
-  border: 2px solid rgb(27, 220, 20);
-  transition: all 0.3s ease;
-}
-.right form .button-area button:hover{
-  color: rgb(27, 220, 20);
-  background: none;
-}
-
-
 @media (max-width: 1104px) {
     .about .about-content .left img{
         height: 350px;
