--- a/style.css
+++ b/style.css
@@ -460,6 +460,37 @@ section .title::after{
     font-size: 10px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    padding-left: 18px;
+  }
+  
+  .fa:hover {
+    opacity: 0.5;
+  }
+
+  .fa-facebook {
+   
+    color: rgb(0, 17, 255);
+  }
+  
+  .fa-linkedin {
+ 
+    border-radius: 50px;
+    margin: 4px;
+    color: rgb(55, 0, 255);
+  }
+  .fa-instagram{
+    color: rgb(255, 0, 0);
+  }
+  .fa-github {
+    border:0;
+    color: rgb(0, 0, 0);
+  }
 @media (max-width: 1104px) {
     .about .about-content .left img{
         height: 350px;
@@ -474,6 +505,7 @@ section .title::after{
     }
   
 }
+
 
 @media (max-width: 991px) {
     .max-width{
