--- a/style.css
+++ b/style.css
@@ -126,8 +126,8 @@ section .title::after{
 }
 
 .menu-btn{
-    color: #fff;
-    font-size: 23px;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
     cursor: pointer;
     display: none;
 }
